fix css align issue

--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ a:hover {
 #element-align {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  
   height: 2.5rem;   
   
  
